[package]
name = "uni_rc_lock"
version = "0.1.0"
edition = "2021"
authors = ["Semen Yesylevskyy <yesint4@yahoo.com>"]
license =  "MIT OR Apache-2.0"
homepage = "https://github.com/yesint/uni_rc_lock"
repository = "https://github.com/yesint/uni_rc_lock"
documentation = "https://docs.rs/uni_rc_lock"
readme = "README.md"
keywords = ["smart pointer","lock","rc","arc"]
categories = ["rust-patterns","memory-management","concurrency"]

[dependencies]
