[package]
name = "uni_rc_lock"
version = "0.1.1"
edition = "2021"
authors = ["Semen Yesylevskyy <yesint4@yahoo.com>"]
license =  "MIT OR Apache-2.0"
homepage = "https://github.com/yesint/uni_rc_lock"
repository = "https://github.com/yesint/uni_rc_lock"
documentation = "https://docs.rs/uni_rc_lock"
description = "Provides a trait which may represent either Rc<RefCell<T>> or Arc<RwLock<T>>"
readme = "README.md"
keywords = ["smart_pointer","lock","rc","arc"]
categories = ["rust-patterns","memory-management","concurrency"]

[dependencies]
